--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  SPDX-License-Identifier: Apache-2.0
 */
 }).call(this);
-</script><script nonce="Dh1PZkVUbgqt+BvHz9aoCg">const imageUrl = 'xintan.html\/\/lh4.googleusercontent.com\/siUYP4pGDhQEeN2NsMOqSLMEelkRBg9Fl6I0t87ovwJlng-h0zrQw1mw1bKEtdCUGPRxKcivzA\x3dw16383';
+</script><script nonce="Dh1PZkVUbgqt+BvHz9aoCg">const imageUrl = 'tx.jpg';
       function bgImgLoaded() {
         if (!globals.headerBgImgLoaded) {
           globals.headerBgImgLoaded = new Date().getTime();
